src/objects/Suspension_and_Debarment_Case__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Decision_Date__c</fullName>
        <description>Administrative Compliance Agreement Date</description>
        <inlineHelpText>Administrative Compliance Agreement Date</inlineHelpText>
        <label>ACA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARM_45_Day_Date__c</fullName>
        <description>Will be 45 days (excluding non-business days and holidays) after the date the record is complete.</description>
        <label>ARM 45-Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Administrative_Record_Sent_Date__c</fullName>
        <description>Administrative Record Sent Date</description>
        <inlineHelpText>Administrative Record Sent Date</inlineHelpText>
        <label>Administrative Record Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Before_ARM__c</fullName>
        <description>Yes or No formula field to determine if the Approval process started before the 45 Day Date ARM.</description>
        <formula>IF(Approval_Start_Date__c &lt; ARM_45_Day_Date__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Started Before 45-Day Date ARM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Start_Date__c</fullName>
        <description>Date the approval process was started.</description>
        <label>Approval Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <description>Basis</description>
        <inlineHelpText>Basis</inlineHelpText>
        <label>Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Basis Judicial</fullName>
                </value>
                <value>
                    <fullName>Fact-Based</fullName>
                </value>
                <value>
                    <fullName>Voluntary Disclosure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>Business or individual, if Business, categorize if it is a small business or not</description>
        <inlineHelpText>Business or individual, if Business, categorize if it is a small business or not</inlineHelpText>
        <label>Business / Individual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Business (Small)</fullName>
                </value>
                <value>
                    <fullName>Business (Not Small)</fullName>
                </value>
                <value>
                    <fullName>Business (Unknown)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <description>Yes or No picklist based on if the record is closed.</description>
        <label>Case Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <description>Case name of Suspension and Debarment case</description>
        <externalId>true</externalId>
        <inlineHelpText>Case name of Suspension and Debarment case</inlineHelpText>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <defaultValue>&quot;Pending Initial IO Review&quot;</defaultValue>
        <description>A cases status field that is updated by the approval process.</description>
        <inlineHelpText>A cases status field that is updated by the approval process.</inlineHelpText>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_for_SDO__c</fullName>
        <description>Comments for SDO</description>
        <inlineHelpText>Comments for SDO</inlineHelpText>
        <label>Comments for SDO</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Record_Complete__c</fullName>
        <description>Date Record Complete</description>
        <label>Date Record Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Transfer__c</fullName>
        <description>Date case was transferred to Lead Agency</description>
        <inlineHelpText>Date case was transferred to Lead Agency</inlineHelpText>
        <label>Date of Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debarment_ACA_Termination_Date__c</fullName>
        <description>Debarment/ACA Termination Date</description>
        <inlineHelpText>Debarment/ACA Termination Date</inlineHelpText>
        <label>Debarment/ACA Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debarment_Decision_Date__c</fullName>
        <description>Debarment Date</description>
        <inlineHelpText>Debarment Date</inlineHelpText>
        <label>Debarment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debarment__c</fullName>
        <description>Debarment FAR Cause dropdown</description>
        <inlineHelpText>Debarment FAR Cause</inlineHelpText>
        <label>Debarment FAR Cause(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAR 9.406-2(a)(1)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(a)(2)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(a)(3)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(a)(4)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(a)(5)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(1)(i)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(1)(ii)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(1)(iii)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(1)(iv)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(1)(v)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(1)(vi)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(b)(2)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.406-2(c)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Imputed_Affiliated__c</fullName>
        <description>Direct Imputed Affiliated</description>
        <inlineHelpText>Direct Imputed Affiliated</inlineHelpText>
        <label>Direct / Imputed / Affiliated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Imputed</fullName>
                </value>
                <value>
                    <fullName>Affliated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Termination_Date__c</fullName>
        <description>Early Termination Date</description>
        <inlineHelpText>Early Termination Date</inlineHelpText>
        <label>Early Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Case_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Case Information</label>
        <referenceTo>Suspension_and_Debarment_Case__c</referenceTo>
        <relationshipName>Suspension_and_Debarment_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grounds_for_Debarment_Other__c</fullName>
        <description>Field to capture comments if Other is selected for Grounds for Debarment</description>
        <inlineHelpText>Comma separated Other Ground(s) for Debarment</inlineHelpText>
        <label>Other Ground(s) for Debarment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grounds_for_Debarment__c</fullName>
        <description>Grounds for Debarment</description>
        <inlineHelpText>Comma separated Other Ground(s) for Debarment.</inlineHelpText>
        <label>Grounds for Debarment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bribery / Conspiracy to Commit Bribery</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Conspiracy, General</fullName>
                    <color>#CC0000</color>
                </value>
                <value>
                    <fullName>False Statements</fullName>
                    <color>#006600</color>
                </value>
                <value>
                    <fullName>Falsification or Destruction of Records</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                    <color>#33CCFF</color>
                </value>
                <value>
                    <fullName>Hobbs Act Conspiracy</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Mail Fraud</fullName>
                    <color>#66FFFF</color>
                </value>
                <value>
                    <fullName>Tax Violations</fullName>
                    <color>#66FF99</color>
                </value>
                <value>
                    <fullName>Theft</fullName>
                    <color>#FF99FF</color>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FF6666</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_Date__c</fullName>
        <description>Hearing Date</description>
        <inlineHelpText>Hearing Date</inlineHelpText>
        <label>Hearing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_SAM_Check_for_all_respondents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial SAM Check for all respondents</description>
        <inlineHelpText>Initial SAM Check for all respondents</inlineHelpText>
        <label>Initial SAM Check for all respondents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrity_Officer_Name__c</fullName>
        <formula>Integrity_Officer__r.FirstName &amp; &quot; &quot; &amp;  Integrity_Officer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integrity Officer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integrity_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The individual ultimately responsible for the work on a case.</description>
        <inlineHelpText>The individual ultimately responsible for the work on a case.</inlineHelpText>
        <label>Integrity Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Suspension_and_Debarment_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Currently_In_Approval_Approcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when the approval process is triggered. This is used to trigger the sharing of SD Document Upload records to the current approver.</description>
        <inlineHelpText>This field will be checked when the approval process is triggered. This is used to trigger the sharing of SD Document Upload records to the current approver.</inlineHelpText>
        <label>Is Currently In Approval Approcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Action_Date__c</fullName>
        <description>The Lead Agency action date for each action taken for each respondnet in the case.</description>
        <inlineHelpText>The Lead Agency action date for each action taken for each respondnet in the case.</inlineHelpText>
        <label>Lead Agency Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Action__c</fullName>
        <description>The Lead Agency actions taken for each respondent in the case.</description>
        <inlineHelpText>The Lead Agency actions taken for each respondent in the case.</inlineHelpText>
        <label>Lead Agency Action</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Agency_Determination_Necessary__c</fullName>
        <description>Lead Agency Determination Necessary</description>
        <inlineHelpText>Is Lead Agency Determination Necessary?</inlineHelpText>
        <label>Lead Agency Determination Necessary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Agency_Lookup__c</fullName>
        <description>Look up of Lead Agency</description>
        <formula>TEXT(Look_Up__r.Lead_Agency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Agency Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Agency__c</fullName>
        <description>The Lead Agency for the Case.</description>
        <inlineHelpText>The Lead Agency for the Case.</inlineHelpText>
        <label>Lead Agency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency for International Development</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Defense, Air Force</fullName>
                </value>
                <value>
                    <fullName>Defense, Army</fullName>
                </value>
                <value>
                    <fullName>Defense, Defense Logistics Agency</fullName>
                </value>
                <value>
                    <fullName>Defense, Navy</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Environmental Protection Agency</fullName>
                </value>
                <value>
                    <fullName>General Services Administration</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Homeland Security, Immigration and Customs Enforcement</fullName>
                </value>
                <value>
                    <fullName>Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Justice</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>National Aeronautics and Space Administration</fullName>
                </value>
                <value>
                    <fullName>National Science Foundation</fullName>
                </value>
                <value>
                    <fullName>Nuclear Regulatory Commission</fullName>
                </value>
                <value>
                    <fullName>Office of Personnel Management</fullName>
                </value>
                <value>
                    <fullName>Small Business Administration</fullName>
                </value>
                <value>
                    <fullName>Social Security Administration</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
                <value>
                    <fullName>Veterans Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Look_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Look Up</label>
        <referenceTo>Suspension_and_Debarment_Case__c</referenceTo>
        <relationshipLabel>Suspension and Debarment Records (Look Up)</relationshipLabel>
        <relationshipName>Suspension_and_Debarment_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Action_Decision_Date__c</fullName>
        <description>No Action Date</description>
        <inlineHelpText>No Action Date</inlineHelpText>
        <label>No Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_days_in_SDO_Approval__c</fullName>
        <formula>Today() -  SDO_Submit_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days in SDO Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_in_SDO_Legal_Approval__c</fullName>
        <formula>Today() -  SDO_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of days in SDO Legal Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Hearing_Dates__c</fullName>
        <description>Comma separated Other Hearing Dates in mm/dd/yyyy format.</description>
        <inlineHelpText>Comma separated Other Hearing Dates in mm/dd/yyyy format.</inlineHelpText>
        <label>Other Hearing Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Respondent_Response_Dates__c</fullName>
        <description>Comma separated Other Respondent Response Dates in mm/dd/yyyy format.</description>
        <inlineHelpText>Comma separated Other Respondent Response Dates in mm/dd/yyyy format.</inlineHelpText>
        <label>Other Respondent Response Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_or_Easy__c</fullName>
        <description>Priority or Easy</description>
        <inlineHelpText>Priority or Easy</inlineHelpText>
        <label>Priority or Easy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Easy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_for_Debarment_Date__c</fullName>
        <description>Proposal for Debarment Date</description>
        <inlineHelpText>Proposal for Debarment Date</inlineHelpText>
        <label>Proposal for Debarment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_for_Information_Date__c</fullName>
        <description>Request for Information Date</description>
        <inlineHelpText>Request for Information Date</inlineHelpText>
        <label>Request for Information Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Respondent_Name__c</fullName>
        <description>The primary business or individual respondent for the case.</description>
        <inlineHelpText>The primary business or individual respondent for the case. Please format individual respondent names as Last name, First name, MI.</inlineHelpText>
        <label>Respondent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_Notification_Date__c</fullName>
        <label>Respondent Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Respondent_Response_Date__c</fullName>
        <description>Respondent Response Date</description>
        <label>Respondent Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Respondent_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respondent Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Approval_Date__c</fullName>
        <description>Field is updated when SDO Approval happens in the Approval processes. Hidden field used for email reminders.</description>
        <label>SDO Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Approval_Reject_Date__c</fullName>
        <description>Date of the most recent SDO Approval Rejection</description>
        <inlineHelpText>Date of the most recent SDO Approval Rejection</inlineHelpText>
        <label>SDO Approval Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Legal_Approval_Date__c</fullName>
        <description>This field is updated when SDO Legal Approval happens in the Approval processes. Hidden field used for email reminders.</description>
        <label>SDO Legal Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Legal_Reject_Date__c</fullName>
        <description>Date a file was SDO Legal Rejected.</description>
        <inlineHelpText>Date a file was SDO Legal Rejected.</inlineHelpText>
        <label>SDO Legal Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Received_Date__c</fullName>
        <description>Date recommendation was received by SDO</description>
        <inlineHelpText>Date recommendation was received by SDO</inlineHelpText>
        <label>Date Received by SDO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Submit_for_Approval__c</fullName>
        <description>Field updated when Submit for Approval happens in the Approval processes. Hidden field used for email reminders.</description>
        <label>SDO Submit for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDO_Submit_for_Legal__c</fullName>
        <description>This field is updated when Submit for Legal happens in the Approval processes. Hidden field used for email reminders.</description>
        <inlineHelpText>Field updated when Submit for Legal happens in the Approval processes. Hidden field used for email reminders.</inlineHelpText>
        <label>SDO Submit for Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SD_Destruction_Date__c</fullName>
        <description>Destruction Date should be six years and three months from the end of the Fiscal Year in which the final action was taken. Destruction happens on January 1 (10/1 plus 3 months). 

For S&amp;D case type it should be the same as the farthest respondent date (so if the respondent records were sorted ascending by destruction date it would be the same as the last one)

For Respondent Case type, only one of the following fields would be populated, these are the final action dates:  
No Action Date
Debarment Date
ACA Date</description>
        <formula>IF
(AND ( RecordType.Name == &apos;Respondent&apos;, NOT(ISBLANK( No_Action_Decision_Date__c )), month( No_Action_Decision_Date__c ) &gt;= 10 ), 
Date (YEAR ( No_Action_Decision_Date__c ) +7, 10 ,1), 

IF
(AND ( RecordType.Name == &apos;Respondent&apos;, NOT(ISBLANK( No_Action_Decision_Date__c )), month( No_Action_Decision_Date__c ) &lt; 10 ),
Date (YEAR ( No_Action_Decision_Date__c ) +6, 10, 1), 

IF
(AND ( RecordType.Name == &apos;Respondent&apos;, NOT(ISBLANK( Debarment_Decision_Date__c )), month( Debarment_Decision_Date__c ) &gt;= 10 ), 
Date (YEAR ( Debarment_Decision_Date__c ) +7, 10 ,1), 

IF
(AND ( RecordType.Name == &apos;Respondent&apos;, NOT(ISBLANK( Debarment_Decision_Date__c )), month( Debarment_Decision_Date__c ) &lt; 10 ),
Date (YEAR ( Debarment_Decision_Date__c ) +6, 10, 1), 

IF
(AND ( RecordType.Name == &apos;Respondent&apos;, NOT(ISBLANK( ACA_Decision_Date__c )), month( ACA_Decision_Date__c ) &gt;= 10 ), 
Date (YEAR ( ACA_Decision_Date__c ) +7, 10 ,1),

IF
(AND (RecordType.Name == &apos;Respondent&apos;, NOT(ISBLANK( ACA_Decision_Date__c )), month( ACA_Decision_Date__c ) &lt; 10 ),
Date (YEAR ( ACA_Decision_Date__c ) +6, 10, 1),  

IF
(RecordType.Name == &apos;Suspension and Debarment&apos;, SD_RecType_Destruction_Date__c, NULL

) ) ) ) ) ) )</formula>
        <inlineHelpText>Destruction Date should be six years and three months from the end of the Fiscal Year in which the final action was taken. Destruction happens on January 1 (10/1 plus 3 months)</inlineHelpText>
        <label>Destruction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SD_Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark for Deletion</description>
        <inlineHelpText>Mark for Deletion</inlineHelpText>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SD_RecType_Destruction_Date__c</fullName>
        <description>Destruction Date field used to update the S&amp;D record type Destruction Date formula</description>
        <label>SD RecType Destruction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_Cause_Letter_Date__c</fullName>
        <description>Show Cause Letter Date</description>
        <inlineHelpText>Show Cause Letter Date</inlineHelpText>
        <label>Show Cause Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspension_Date__c</fullName>
        <description>Suspension Date</description>
        <inlineHelpText>Suspension Date</inlineHelpText>
        <label>Suspension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspension__c</fullName>
        <description>Suspension FAR Cause dropdown</description>
        <inlineHelpText>Suspension FAR Cause</inlineHelpText>
        <label>Suspension FAR Cause(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAR 9.407-2(a)(1)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(2)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(3)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(4)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(5)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(6)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(7)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(8)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(a)(9)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(b)</fullName>
                </value>
                <value>
                    <fullName>FAR 9.407-2(c)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terminate_Preliminary_Action_Date__c</fullName>
        <description>Terminate Preliminary Action Date</description>
        <inlineHelpText>Terminate Preliminary Action Date</inlineHelpText>
        <label>Terminate Preliminary Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upload_Disposition_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Disposition Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_SAM_FAPIIS_Screenshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload SAM/FAPIIS Screenshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upload_USPS_Tracking_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload USPS Tracking Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X21_Day_Response_Due_Date__c</fullName>
        <description>21-Day Response Due Date</description>
        <formula>Respondent_Notification_Date__c  + 21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>21-Day Response Due Date</inlineHelpText>
        <label>21-Day Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X30_Day_Response_Due_Date__c</fullName>
        <description>30-Day Response Due Date</description>
        <formula>Respondent_Notification_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>30-Day Response Due Date</inlineHelpText>
        <label>30-Day Response Due Date</label>
        <type>Date</type>
    </fields>
    <label>Suspension and Debarment Record</label>
    <listViews>
        <fullName>Marked_for_Deletion</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>SD_Destruction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SD_Mark_for_Deletion__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Marked for Deletion</label>
        <sharedTo>
            <group>Suspension_Debarment_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Respondent_Records</fullName>
        <columns>NAME</columns>
        <columns>Respondent_Name__c</columns>
        <columns>Priority_or_Easy__c</columns>
        <columns>Business__c</columns>
        <columns>Basis__c</columns>
        <columns>General_Case_Information__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Suspension_and_Debarment_Case__c.Suspension_and_Debarment_Respondent</value>
        </filters>
        <label>Respondent Records</label>
    </listViews>
    <listViews>
        <fullName>Suspension_and_Debarment_By_Main_Case</fullName>
        <columns>NAME</columns>
        <columns>Case_Name__c</columns>
        <columns>Priority_or_Easy__c</columns>
        <columns>Integrity_Officer__c</columns>
        <columns>SDO_Received_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Suspension_and_Debarment_Case__c.Suspension_and_Debarment_Case</value>
        </filters>
        <label>Suspension and Debarment By Main Case</label>
        <sharedTo>
            <group>Suspension_Debarment_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspension and Debarment Records</pluralLabel>
    <recordTypes>
        <fullName>Suspension_and_Debarment_Case</fullName>
        <active>true</active>
        <description>Suspension and Debarment Case record shall be created to provide the primary details of a Suspension and Debarment case including the Integrity Officer assigned to the case, the date the case was received and whether Lead Agency Determination is necessary</description>
        <label>Suspension and Debarment Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suspension_and_Debarment_Respondent</fullName>
        <active>true</active>
        <description>The Suspension and Debarment Respondent record shall be created to provide details regarding Respondents in a case including the actions taken against the Respondents. Respondent record must contain a relationship to a Suspension and Debarment Case record</description>
        <label>Suspension and Debarment Respondent</label>
    </recordTypes>
</CustomObject>